# circuit-maintenance-parser

./: .flake8  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  anonymize_ips.py  anonymize_public_ips.py  jtest.py  message_eml.eml  pyproject.toml  tasks.py  towncrier_template.j2
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
changes/: 320.housekeeping  328.housekeeping  329.housekeeping  331.housekeeping  335.housekeeping
circuit_maintenance_parser/: __init__.py  cli.py  constants.py  data.py  errors.py  output.py  parser.py  processor.py  provider.py  providers.py  utils.py
circuit_maintenance_parser/parsers/: __init__.py  apple.py  aquacomms.py  att.py  aws.py  bso.py  cogent.py  colt.py  crowncastle.py  equinix.py  globalcloudxchange.py  google.py  gtt.py  hgc.py  lumen.py  megaport.py  momentum.py  netflix.py  openai.py  packetfabric.py  pccw.py  seaborn.py  sparkle.py  tata.py  telia.py  telstra.py  turkcell.py  verizon.py  windstream.py  zayo.py
circuit_maintenance_parser/processors/: __init__.py
circuitmaint_parser/: __init__.py  errors.py  output.py  parser.py
circuitmaint_parser/parsers/: eunetworks.py  ntt.py  zayo.py
docs/: release_notes.md
tests/: conftest.py
tests/integration/: test_eunetworks.py  test_ical.py  test_lumen.py  test_megaport.py  test_ntt.py  test_packetfabric.py  test_parsers.py  test_telstra.py  test_zayo.py
tests/integration/data/cogent/: cogent1_result.json  cogent2_result.json  cogent3.html
tests/integration/data/eunetworks/: eunetworks1  eunetworks1_result.json
tests/integration/data/ical/: ical2_result.json  ical3_result.json  ical4  ical4_result.json  ical_no_provider
tests/integration/data/lumen/: lumen1_result.json  lumen2_result.json
tests/integration/data/megaport/: megaport1_result.json  megaport2.html  megaport2_result.json
tests/integration/data/ntt/: ntt1_result.json
tests/integration/data/packetfabric/: packetfabric1  packetfabric1_result.json
tests/integration/data/telstra/: telstra1.html  telstra1_result.json  telstra2_result.json
tests/integration/data/zayo/: zayo1.html  zayo1_result.json  zayo2.html  zayo2_result.json  zayo_missing_maintenance_id.html
tests/unit/: _test_cogent.py  colt6.eml  conftest.py  test_data.py  test_e2e.py  test_init.py  test_output.py  test_parser.py  test_parsers.py  test_processors.py  test_provider.py  test_providers.py  test_utils.py
tests/unit/data/apple/: apple1.eml  apple1_result.json  apple1_text_parser_result.json  apple2_subject_parser_result.json
tests/unit/data/aquacomms/: aquacomms1.eml  aquacomms1_html_parser_result.json  aquacomms1_result.json  aquacomms1_subject_parser_result.json
tests/unit/data/arelion/: arelion1  arelion1_result.json  arelion2  arelion2_result.json
tests/unit/data/att/: att1.eml  att1.xlsx  att1_e2e_result.json  att1_html_parser_result.json  att2.eml  att2.xlsx  att2_e2e_result.json  att2_xlsx_parser_result.json  att3.eml  att3.xlsx  att3_e2e_result.json  att_html_parser_result.json
tests/unit/data/aws/: aws1.eml  aws1_result.json  aws1_text_parser_result.json  aws2.eml  aws2_result.json  aws2_subject_parser_result.json  aws2_text_parser_result.json  aws3.eml  aws3_result.json  aws3_subject_parser_result.json  aws3_text_parser_result.json  aws4.eml  aws4_html_parser_result.json  aws4_result.json
tests/unit/data/bso/: bso1.html  bso1_first.eml  bso1_result.json  bso2.html  bso2_result.json  bso2_start.eml  bso3.html  bso3_result.json  bso3_update.eml  bso4.html  bso4_end.eml  bso4_result.json  bso5.html  bso5_reminder_multiple_ts.eml  bso5_result.json  bso6.html  bso6_cancel.eml  bso6_result.json  bso7.html  bso7_backup_ts.eml  bso7_result.json
tests/unit/data/cogent/: cogent1.html  cogent1_result.json  cogent2.html  cogent2_result.json  cogent3.eml  cogent3_result.json
tests/unit/data/colt/: colt1  colt1.ics  colt1_result.json  colt2.csv  colt2_result.json  colt3.eml  colt3_result.json  colt4.eml  colt4_result.json  colt4_subject_parser_1_result.json  colt5.eml  colt5_result.json  colt5_subject_parser_2_result.json  colt6.eml  colt6_result.json  colt6_subject_parser_2_result.json  colt7.eml  colt7_result.json
tests/unit/data/crowncastle/: crowncastle1.eml  crowncastle1_result.json  crowncastle2.html  crowncastle2_parser_result.json  crowncastle3.html  crowncastle3_parser_result.json  crowncastle4.html  crowncastle4_parser_result.json  crowncastle5.html  crowncastle5_parser_result.json  crowncastle6.html  crowncastle6_parser_result.json  crowncastle7.eml  crowncastle7_result.json  crowncastle8.html  crowncastle8_parser_result.json  crowncastle9.html  crowncastle9_parser_result.json
tests/unit/data/date/: email_date_1  email_date_1_result.json
tests/unit/data/equinix/: equinix1.eml  equinix1_result1.json  equinix1_result_combined.json  equinix2.eml  equinix2_result.json  equinix3.eml  equinix3_result.json  equinix3_result_combined.json  equinix4.eml  equinix4_result.json  equinix4_result_combined.json  equinix5.eml  equinix5_result.json  equinix5_result_combined.json  equinix6.eml  equinix6_result.json  equinix6_result_combined.json  equinix7.eml  equinix7_result_combined.json  equinix8.eml  equinix8_result.json  equinix9.eml  equinix9_result.json  equinix9_result_combined.json
tests/unit/data/eunetworks/: eunetworks_cancel.eml  eunetworks_cancel.json
tests/unit/data/globalcloudxchange/: globalcloudxchange1.eml  globalcloudxchange1_html_parser_result.json  globalcloudxchange1_result.json  globalcloudxchange1_subject.eml  globalcloudxchange1_subject_parser_result.json
tests/unit/data/google/: google1.html  google1_parser_result.json  google2.eml  google2_result.json
tests/unit/data/gtt/: gtt1.html  gtt1_email_subject  gtt1_result.json  gtt2.html  gtt2_email_subject  gtt2_result.json  gtt3.html  gtt3_email_subject  gtt3_result.json  gtt4.html  gtt4_email_subject  gtt4_result.json  gtt5.html  gtt5_email_subject  gtt5_result.json  gtt6.html  gtt6_email_subject  gtt6_result.json  gtt7.eml  gtt7_html_parser_result.json  gtt8  (+4 more)
(+205 files in other folders)
