[tool.poetry]
name = "circuitmaint_parser"
version = "0.0.1"
description = "Python library to parse Circuit Maintenance notifications and return a structured data back"
authors = ["Network to Code, LLC <info@networktocode.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {version = "^1.7.2", extras = ["dotenv"]}
toml = "0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests_mock = "^1.7.0"
pyyaml = "^5.3"
black = "^19.10b0"
pylint = "^2.4.4"
pydocstyle = "^5.0.2"
yamllint = "^1.20.0"
bandit = "^1.6.2"
invoke = "^1.4.1"
toml = "0.10.1"
flake8 = "^3.8.3"

[tool.poetry.scripts]
circuitmaint_parser = 'circuitmaint_parser.cli:main'

[tool.circuitmaint_parser]
string_required = "some string"
array_default = ["a", "b", "c"]
url_default = "http://localhost"
ip_address = "192.168.0.1"
ip_network = "2001:db8:3c4d:15::/64"
file = "README.md"


[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
python_paths = "./"
testpaths = "tests/"
adopts = "-vv"
